testing/tests/ui/include-a-folder.stderr
error: unable to open template file '$WORKSPACE/target/tests/trybuild/rinja_testing/templates/a_file_that_is_actually_a_folder.html': Is a directory (os error 21)
 --> YouCannotIncludeFolders.txt:1:3
  |
       1 | {% include "a_file_that_is_actually_a_folder.html" %}
         |   ^ close to this token
         |
 --> tests/ui/include-a-folder.rs:4:3
  |
4 | #[template(ext = "txt", source = r#"{% include "a_file_that_is_actually_a_folder.html" %}"#)]
  |   ^^^^^^^^
